--- a/index.html
+++ b/index.html
@@ -22,15 +22,17 @@
     </header>
 
     <nav>
-        <ul>
+        <ul class="linkit">
             <li> <a href="menu.html">Ruokalista</a> </li>
             <li> <a href="historia.html">Historia</a> </li>
+            <li> <a href="sijainti.html">Sijainti</a> </li>
         </ul>
     </nav>
 
     <div class="etusivut">
         
         <h2>Tervetuloa nauttimaan!</h2>
+        <img src="img/Grilli.jpg" alt="Grillin Kuva" title="Grilli">
             
     </div>
 
