--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="etusivut">
         
         <h2>Tervetuloa nauttimaan!</h2>
-        <img src="img/Grilli.jpg" alt="Grillin Kuva" title="Grilli">
+        <img src="img/Grilli.jpg" alt="Grilli" title="Grilli">
             
     </div>
 
